Fix wrapping

--- a/webviews/common/common.css
+++ b/webviews/common/common.css
@@ -463,6 +463,7 @@ button.inlined-dropdown {
 	display: inline-flex;
 	align-items: center;
 	vertical-align: middle;
+	grid-column: none;
 }
 
 .commit-spinner-before {
